--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,9 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[[tool.poetry.source]]
+name = "gitlab"
+url = "https://gitlab.com/api/v4/projects/78077800/packages/pypi/poetry"
+priority = "primary"
+
